@@ -1,67 +1,0 @@
-#!/usr/bin/make -f
-
-#export DH_VERBOSE=1
-export DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-export DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-# FOR AUTOCONF 2.52 AND NEWER ONLY
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-  confflags += --build $(DEB_HOST_GNU_TYPE)
-else
-  confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
-endif
-
-confflags += --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	./configure $(confflags) --prefix=/usr
-	touch configure-stamp
-
-build: configure-stamp build-stamp
-build-stamp:
-	dh_testdir
-	$(MAKE)
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-	-$(MAKE) distclean
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs -plibdts-dev usr/lib usr/include
-	$(MAKE) install DESTDIR=`pwd`/debian/libdts-dev/
-	rm -Rf debian/libdts-dev/usr/bin
-	rm -Rf debian/libdts-dev/usr/share/man
-
-binary-indep: build install
-
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs AUTHORS NEWS README TODO
-	dh_installmenu
-	dh_installcron
-	dh_installinfo
-	dh_installmime
-	dh_installchangelogs ChangeLog
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
